force-app/main/default/objects/custom_create97__c/custom_create97__c.object-meta.xml
<CustomObject>
    <label>Custom created object97</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects97</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>