force-app/main/default/objects/custom_create97__c/fields/custom_create_97field525__c.field-meta.xml
<CustomField>
    <fullName>custom_create_97field525__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 97field525</label>
    <type>Checkbox</type>
</CustomField>