force-app/main/default/objects/custom_create97__c/fields/custom_create_97field582__c.field-meta.xml
<CustomField>
    <fullName>custom_create_97field582__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 97field582</label>
    <type>Checkbox</type>
</CustomField>